--- a/.github/workflows/issues-scan.yml
+++ b/.github/workflows/issues-scan.yml
@@ -21,6 +21,7 @@ on:
     pull_request_target:
         branches:
             - alpine-base
+            - pr-test
 
 # #
 #   environment variables
