--- a/.github/workflows/labels-create.yml
+++ b/.github/workflows/labels-create.yml
@@ -134,6 +134,19 @@ jobs:
                   echo "Assigning labels and assignees"
 
             # #
+            #   Create Labels › Set Env Variables
+            # #
+
+            - name: >-
+                🕛 Get Timestamp
+              id: task_label_set_timestamp
+              run: |
+                  echo "NOW=$(date +'%m-%d-%Y %H:%M:%S')" >> $GITHUB_ENV
+                  echo "NOW_SHORT=$(date +'%m-%d-%Y')" >> $GITHUB_ENV
+                  echo "NOW_LONG=$(date +'%m-%d-%Y %H:%M')" >> $GITHUB_ENV
+                  echo "NOW_DOCKER_LABEL=$(date +'%Y%m%d')" >> $GITHUB_ENV
+
+            # #
             #   [ Create Labels ] Checkout
             # #
 
@@ -150,6 +163,7 @@ jobs:
 
             - name: >-
                   🏷️ Verify Existing Labels
+              id: task_label_verify_existing
               uses: actions/github-script@v7
               with:
                   github-token: ${{ secrets.ADMINSERV_TOKEN_CL }}
@@ -157,6 +171,7 @@ jobs:
                       const labels = JSON.parse( process.env.LABELS_JSON );
                       for ( const label of labels )
                       {
+                          let count = 0 ;
                           try
                           {
                               await github.rest.issues.createLabel(
@@ -167,6 +182,7 @@ jobs:
                                   description:  label.description || '',
                                   color:        label.color
                               });
+                              count += i;
                           }
                           catch ( err )
                           {
@@ -180,3 +196,88 @@ jobs:
                               }
                           }
                       }
+
+                      console.log(count);
+
+                      return count
+
+            # #
+            #   Cleanup › Get Weekly Commits
+            # #
+
+            - name: >-
+                🕛 Get Weekly Commit List
+              id: task_label_set_weekly_commit_list
+              run: |
+                  echo 'WEEKLY_COMMITS<<EOF' >> $GITHUB_ENV
+                  git log --format="[\`%h\`](${{ github.server_url }}/${{ github.repository }}/commit/%H) %s - %an" --since=7.days >> $GITHUB_ENV
+                  echo 'EOF' >> $GITHUB_ENV
+
+            # #
+            #   Cleanup › Notify Github › Success
+            # #
+
+            - name: >-
+                🔔 Send Discord Webhook Message (Success)
+              id: task_label_notify_discord_success
+              uses: tsickert/discord-webhook@v6.0.0
+              if: success()
+              with:
+                  username: 'Io'
+                  avatar-url: 'https://i.imgur.com/8BVDkla.jpg'
+                  webhook-url: ${{ secrets.DISCORD_WEBHOOK_CHAN_DOCKER_BASE_ALPINE_WORKFLOWS }}
+                  embed-title: "⚙️ ${{ github.workflow_ref }}"
+                  embed-url: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                  embed-thumbnail-url: 'https://i.imgur.com/zDIzE8T.jpg'
+                  embed-description: |
+                      ## 📦 Labels › Create ${{ job.status == 'success' && '✅' || '❌' }}
+
+                      A **successful** workflow has been ran to generate labels for your repository.
+
+                      - Labels Created: `${{ steps.task_label_verify_existing.outputs.result }}`
+                      - Workflow: `${{ github.workflow }} (#${{github.run_number}})`
+                      - Runner: `${{ runner.name }}`
+                      - Triggered By: `${{ github.actor }}`
+                      - Status: `${{ job.status == 'success' && '✅ Successful' || '❌ Failed' }}`
+
+                  embed-color: ${{ job.status == 'success' && '5763719' || '15418782' }}
+                  embed-footer-text: "Completed at ${{ env.NOW }} UTC"
+                  embed-timestamp: "${{ env.NOW_LONG }}"
+                  embed-author-name: "${{ github.repository_owner }}"
+                  embed-author-url: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                  embed-author-icon-url: "https://avatars.githubusercontent.com/u/200161462"
+
+            # #
+            #   Cleanup › Notify Github › Failure
+            # #
+
+            - name: >-
+                🔔 Send Discord Webhook Message (Failure)
+              id: task_label_notify_discord_failure
+              uses: tsickert/discord-webhook@v6.0.0
+              if: failure()
+              with:
+                  username: 'Io'
+                  avatar-url: 'https://i.imgur.com/8BVDkla.jpg'
+                  webhook-url: ${{ secrets.DISCORD_WEBHOOK_CHAN_DOCKER_BASE_ALPINE_WORKFLOWS }}
+                  embed-title: "⚙️ ${{ github.workflow_ref }}"
+                  embed-url: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                  embed-thumbnail-url: 'https://i.imgur.com/zDIzE8T.jpg'
+                  embed-description: |
+                      ## 📦 Labels › Create ${{ job.status == 'success' && '✅' || '❌' }}
+
+                      A **failed** attempt was made to run this workflow. No new labels have been added to your repository.
+
+                      - Labels Created: `${{ steps.task_label_verify_existing.outputs.result }}`
+                      - Workflow: `${{ github.workflow }} (#${{github.run_number}})`
+                      - Runner: `${{ runner.name }}`
+                      - Triggered By: `${{ github.actor }}`
+                      - Status: `${{ job.status == 'success' && '✅ Successful' || '❌ Failed' }}`
+
+                  embed-color: ${{ job.status == 'success' && '5763719' || '15418782' }}
+                  embed-footer-text: "Completed at ${{ env.NOW }} UTC"
+                  embed-timestamp: "${{ env.NOW_LONG }}"
+                  embed-author-name: "${{ github.repository_owner }}"
+                  embed-author-url: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                  embed-author-icon-url: "https://avatars.githubusercontent.com/u/200161462"
+
