--- a/.github/workflows/labels-clean.yml
+++ b/.github/workflows/labels-clean.yml
@@ -229,7 +229,7 @@ jobs:
                   embed-url: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
                   embed-thumbnail-url: 'https://i.imgur.com/zDIzE8T.jpg'
                   embed-description: |
-                      ## 📦 Labels › Clean ${{ job.status == 'success' && '✅' || '❌' }}
+                      ## 🎫 Labels › Clean ${{ job.status == 'success' && '✅' || '❌' }}
 
                       A **successful** workflow has been ran to wipe all labels from your repository.
                       ${{ steps.task_label_verify_existing.outputs.result }} labels have been removed.
@@ -264,7 +264,7 @@ jobs:
                   embed-url: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
                   embed-thumbnail-url: 'https://i.imgur.com/zDIzE8T.jpg'
                   embed-description: |
-                      ## 📦 Labels › Clean ${{ job.status == 'success' && '✅' || '❌' }}
+                      ## 🎫 Labels › Clean ${{ job.status == 'success' && '✅' || '❌' }}
 
                       A **failed** attempt was made to run this workflow. No new labels have been added to your repository.
 
