--- a/.github/workflows/labels-create.yml
+++ b/.github/workflows/labels-create.yml
@@ -194,7 +194,7 @@ jobs:
                           }
                       }
 
-                      console.log("[Success]: Added" + count + " labels to repo");
+                      console.log("[Success]: Added " + count + " labels to repo");
 
                       return count
 
@@ -230,9 +230,9 @@ jobs:
                       ## 🎫 Labels › Create ${{ job.status == 'success' && '✅' || '❌' }}
 
                       A **successful** workflow has been ran to generate labels for your repository.
-                      ${{ steps.task_label_verify_existing.outputs.result }} labels have been added.
+                      ${{ steps.task_label_verify_existing.outputs.count }} labels have been added.
 
-                      - Labels: `${{ steps.task_label_verify_existing.outputs.result }} created`
+                      - Labels: `${{ steps.task_label_verify_existing.outputs.count }} created`
                       - Workflow: `${{ github.workflow }} (#${{github.run_number}})`
                       - Runner: `${{ runner.name }}`
                       - Triggered By: `${{ github.actor }}`
@@ -266,7 +266,7 @@ jobs:
 
                       A **failed** attempt was made to run this workflow. No new labels have been added to your repository.
 
-                      - Labels: `${{ steps.task_label_verify_existing.outputs.result }} created`
+                      - Labels: `${{ steps.task_label_verify_existing.outputs.count }} created`
                       - Workflow: `${{ github.workflow }} (#${{github.run_number}})`
                       - Runner: `${{ runner.name }}`
                       - Triggered By: `${{ github.actor }}`
