--- a/.github/workflows/labels-create.yml
+++ b/.github/workflows/labels-create.yml
@@ -167,7 +167,7 @@ jobs:
                   github-token: ${{ secrets.ADMINSERV_TOKEN_CL }}
                   script: |
                       const labels = JSON.parse( process.env.LABELS_JSON );
-                      let count = Object.keys(labels).length;
+                      let result = Object.keys(labels).length;
                       for ( const label of labels )
                       {
                           try
@@ -194,9 +194,9 @@ jobs:
                           }
                       }
 
-                      console.log("[Success]: Added " + count + " labels to repo");
+                      console.log("[Success]: Added " + result + " labels to repo");
 
-                      return count
+                      return result
 
             # #
             #   Cleanup › Get Weekly Commits
@@ -230,9 +230,9 @@ jobs:
                       ## 🎫 Labels › Create ${{ job.status == 'success' && '✅' || '❌' }}
 
                       A **successful** workflow has been ran to generate labels for your repository.
-                      ${{ steps.task_label_verify_existing.outputs.count }} labels have been added.
+                      ${{ steps.task_label_verify_existing.outputs.result }} labels have been added.
 
-                      - Labels: `${{ steps.task_label_verify_existing.outputs.count }} created`
+                      - Labels: `${{ steps.task_label_verify_existing.outputs.result }} created`
                       - Workflow: `${{ github.workflow }} (#${{github.run_number}})`
                       - Runner: `${{ runner.name }}`
                       - Triggered By: `${{ github.actor }}`
@@ -266,7 +266,7 @@ jobs:
 
                       A **failed** attempt was made to run this workflow. No new labels have been added to your repository.
 
-                      - Labels: `${{ steps.task_label_verify_existing.outputs.count }} created`
+                      - Labels: `${{ steps.task_label_verify_existing.outputs.result }} created`
                       - Workflow: `${{ github.workflow }} (#${{github.run_number}})`
                       - Runner: `${{ runner.name }}`
                       - Triggered By: `${{ github.actor }}`
