--- a/.github/ISSUE_TEMPLATE/roadmap.yml
+++ b/.github/ISSUE_TEMPLATE/roadmap.yml
@@ -8,58 +8,9 @@ body:
   - type: markdown
     attributes:
       value: |
-        1. This issue type is different from feature requests.
-        2. This issue type is typically used by the developers of this repository to create and track new features
-           that have been planned in a future version of TVApp2.
-        3. Only use this issue type if you have been instructed to do so by a repository contributor.
-        4. Describe the benefits of this plan, and what needs to be taken into consideration during implementation.
-        5. Be detailed but to the point.
+        1. Please speak `English`.
+        2. Make sure you are using the latest version and take a moment to check that your issue hasn't been reported before.
+        3. It's really important to provide pertinent details and logs,
+           incomplete details will be handled as an invalid report.
 
         <br />
-
-    - type: input
-      id: roadmap-version-target
-      attributes:
-          label: Target Version
-          description: Which version are we aiming to introduce this into TVApp2?
-          placeholder: "v1.0.0"
-      validations:
-          required: true
-
-    - type: dropdown
-      id: roadmap-package
-      attributes:
-          label: Package
-          description: |
-              Select which aspect of TVApp2 this roadmap is designed for.
-          options:
-              - App Distribution
-              - Build Process
-              - Dependency / NodeJS Package
-              - Documentation
-              - M3U / EPG Grabber
-              - S6-Overlay
-          default: 0
-      validations:
-          required: true
-
-    - type: textarea
-      id: roadmap-details
-      attributes:
-          label: Roadmap Details
-          description: |
-              Explain the vital steps in a bullet-point breakdown
-          placeholder: |
-              - Requires package update
-              - Must first integrate item A
-      validations:
-          required: true
-
-    - type: textarea
-      id: roadmap-screenshots
-      attributes:
-          label: 'Additional Info / Examples / Screenshots'
-          description: |
-              If available, provide mockups or examples.
-              Any further details you want to add.
-              Example snippets of code.
