--- a/.github/ISSUE_TEMPLATE/roadmap.yml
+++ b/.github/ISSUE_TEMPLATE/roadmap.yml
@@ -15,11 +15,12 @@ body:
 
         <br />
 
-    - type: input
-      id: roadmap-version-target
-      attributes:
-          label: Target Version
-          description: Which version are we aiming to introduce this into TVApp2?
-          placeholder: "v1.0.0"
-      validations:
-          required: true
+  - type: input
+    id: roadmap-version-target
+    attributes:
+      label: Target Version
+      description: |
+        Which version are we aiming to introduce this into TVApp2?
+      placeholder: "v1.0.0"
+    validations:
+      required: true
