--- a/.github/workflows/issues-stale.yml
+++ b/.github/workflows/issues-stale.yml
@@ -141,8 +141,7 @@ jobs:
     job-labels-create:
         name: >-
             🎫 Labels › Verify Existing
-      # runs-on: ubuntu-latest
-        runs-on: apollo-x64
+        runs-on: ubuntu-latest
         timeout-minutes: 4
         steps:
 
@@ -218,8 +217,7 @@ jobs:
     job-issues-nolabel:
         name: >-
             🎫 Labels › Assign Missing
-      # runs-on: ubuntu-latest
-        runs-on: apollo-x64
+        runs-on: ubuntu-latest
         timeout-minutes: 4
         needs: job-labels-create
         steps:
@@ -587,8 +585,7 @@ jobs:
     job-issues-stale:
         name: >-
             💤 Check › Stale
-      # runs-on: ubuntu-latest
-        runs-on: apollo-x64
+        runs-on: ubuntu-latest
         timeout-minutes: 4
         needs:
             - job-labels-create
@@ -631,8 +628,7 @@ jobs:
     job-issues-lock:
         name: >-
             🔒 Check › Inactive
-      # runs-on: ubuntu-latest
-        runs-on: apollo-x64
+        runs-on: ubuntu-latest
         timeout-minutes: 4
         needs:
             - job-labels-create
