--- a/.github/workflows/issues-new.yml
+++ b/.github/workflows/issues-new.yml
@@ -131,8 +131,7 @@ jobs:
     job-labels-create:
         name: >-
             🎫 Labels › Verify Existing
-      # runs-on: ubuntu-latest
-        runs-on: apollo-x64
+        runs-on: ubuntu-latest
         timeout-minutes: 4
         steps:
 
@@ -204,8 +203,7 @@ jobs:
             🏷️ Labels › Assign
         needs:
             - job-labels-create
-      # runs-on: ubuntu-latest
-        runs-on: apollo-x64
+        runs-on: ubuntu-latest
         timeout-minutes: 4
         permissions:
             contents: 'read'
@@ -767,8 +765,7 @@ jobs:
             🏷️ Labels › Phrase Search
         needs:
             - job-labels-create
-      # runs-on: ubuntu-latest
-        runs-on: apollo-x64
+        runs-on: ubuntu-latest
         timeout-minutes: 4
         permissions:
             contents: 'read'
@@ -854,8 +851,7 @@ jobs:
     job-assign-assignees:
         name: >-
             ✍️ Issue › Assignees
-      # runs-on: ubuntu-latest
-        runs-on: apollo-x64
+        runs-on: ubuntu-latest
         timeout-minutes: 4
         needs: [ job-assign-labels ]
       # disable
